# rpi-workshop-env-monitor

./: .envsample  .gitignore  27_humiture.py  DatabaseManager.py  EnvironmentDatabaseManager.py  main.py  pyproject.toml  readme.md
devices/: __init__.py  databasemanager.py  dht.py  ds18.py  lcd.py  mq.py  pcf8591.py  relay.py
devices_old/: __init__.py  active_buzzer.py  dht11.py  ds18B20.py  lcd1602.py  mq2.py  passive_buzzer.py
